<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sip.voip.ui.call.CallFragment"
        android:label="@string/title_call"
        tools:layout="@layout/fragment_call" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sip.voip.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sip.voip.ui.code.CodeFragment"
        android:label="@string/title_code"

        tools:layout="@layout/fragment_code" />
</navigation>