<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/static_led"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:src="@drawable/led_disconnected" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_login_user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/no_login_account"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_weight="99"
                />
            <Button
                android:id="@+id/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/logout"
                android:padding="10dp"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:orientation="horizontal">

        <TextView
            style="@style/assistant_input_field_header_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/dial"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/tel_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:background="@drawable/et_underline_selector"
            android:hint="@string/assistant_dial"
            android:textCursorDrawable="@drawable/cursor_color"></EditText>

        <Button
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/call_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="fill"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            style="@style/assistant_input_field_header_font"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/call_record"
            android:layout_weight="30"
            android:textAllCaps="true" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="10dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/call_records"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>


</LinearLayout>